
* Issue #19: Vim signs are placed now in the window of a buffer loaded before
  the debugging session instead of using the current window.

* Issue #17: Improve the window/buffer management of Pyclewn.

* Issue #22: Autoscroll the console when the ``--window`` option is set to
  ``none``.

* Issue #24: Fix the problem that two ``Cdbgvar`` commands create two windows.

Pyclewn 2.0.1
-------------

.. March 1st, 2015

Bug fixes
^^^^^^^^^

* The ``:Pyclewn`` command can now be used reliably in a Vim script.

* The watchpoints are also displayed in the breakpoints window.

* The ``Cquit`` command does not start a new gdb session anymore.

* The list buffer windows are now empty after the ``Cquit`` command.

* The source distribution can be built when pdb-clone is missing.

Pyclewn 2.0
-----------

.. February 9, 2015

New features
^^^^^^^^^^^^

* Three clewn buffers are updated by gdb, they list the breakpoints, the
  backtrace and the threads. One can jump with the <CR> key or the mouse to
  the corresponding source code line from the ``(clewn)_breakpoints`` window
  or switch to the corresponding frame from the ``(clewn)_backtrace`` window,
  or switch to the correponding thread with the ``(clewn)_threads`` window.
  The ``Ccwindow`` command has been removed.

* All the Vim functions defined by pyclewn that split windows can be
  overriden.

* A compound watched variable in ``(clewn)_variables`` can be expanded and
  collapsed with the <CR> key or the mouse.

* The new ``Cballooneval`` command switches on/off the Vim balloon without
  interfering with the pyclewn key mappings that rely on the Vim 'ballooneval'
  option to be functional.

* The first optional argument of the ``:Pyclewn`` Vim command selects the
  debugger and the following arguments are passed to the debugger. For
  example, to debug ``foobar args`` with gdb, run the Vim commmand
  ``:Pyclewn gdb --args foobar args``.

* The new ``g:pyclewn_terminal`` Vim global variable allows the pyclewn